--- a/styles.css
+++ b/styles.css
@@ -27,14 +27,14 @@
   padding-top: 2%;
   padding-bottom: 2%;
 }
-.centered-items {
+.centered_items {
   display: flex;
   flex-direction: row;
   justify-content: center;
   padding-top: 2%;
   padding-bottom: 2%;
 }
-.top-divider{
+.top-divider {
   border-style: solid none none none;
 }
 /* https://www.developerdrive.com/8-simple-css-hover-effects/ */
@@ -44,7 +44,7 @@
   60%,
   100% {
     -webkit-transform: translateY(0);
-    transform: translateY(-20px);
+    transform: translateY(0);
   }
   40% {
     -webkit-transform:translateY(-20px);
@@ -60,7 +60,7 @@
   height:5%;
 }
 .bouncy-img:hover{
-  animation: bouncy 1s;
+  animation: bounce 1s;
 }
 /* the end */
 
